trunk/tests/should-not-compile/return-int-from-void-function.talc
// EXPECTED ERROR: return expression has type int but must be assignable to void
function void f() { return 123; }
